--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,12 @@
+#--------------------- DB Connection ------------------
+spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/postgres
+spring.datasource.username=admin
+spring.datasource.password=thisisapassword
 
+#--------------------JPA-ORM Properties-----------------
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
+
+server.port=8081
