--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,12 @@
 #--------------------- DB Connection ------------------
-spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/postgres
-spring.datasource.username=admin
-spring.datasource.password=thisisapassword
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+#spring.datasource.url=jdbc:postgresql://0.0.0.0:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+#spring.datasource.username=admin
+#spring.datasource.password=thisisapassword
+
+
 
 #--------------------JPA-ORM Properties-----------------
 spring.jpa.show-sql=true
